Fix Instagram modal form on Firefox

--- a/web/less/includes/bootstrap/modals.less
+++ b/web/less/includes/bootstrap/modals.less
@@ -33,7 +33,6 @@
 
     .modal-body{
       padding: 30px 20px;
-      height: 100%;
 
       .i-circle{
         border: 2px solid darken(@light-color, 5.5%);
